--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,17 @@
             <p id="b"></p>
       </div>
     </div>
+    <div class="selectedColor hslnew">
+      <span id="ColorGrid"></span>
+      <div id="ColorValue">
+        <p id="hsl"></p>
+            <p id="h"></p>
+     
+           <p id="s"> </p>
+        
+            <p id="l"></p>
+      </div>
+      </div>
     </div>
   </div>
   <!-- Select Color from storage -->
